# PointCloudCNN

./: .gitignore  README.md  main.py
data/: fremont_hourly.csv
export/dgcnn_lua/: main.lua
export/dgcnn_lua/utils/: generate_torch_graphs.lua
export/extend/: gcn_numpy.ipynb
extend/: __init__.py  gcn_numpy.py  lxw.py
mpnet/src/: controller.py
mpnet/src/config/: config.py  kitti_config.py
mpnet/src/imdb/: kitti.py
mpnet/src/log/: log.txt
mpnet/src/net/: pointcloud.py
scripts/: mat_to_dat.lua  matio  matio.c  test.lua
scripts/dgcnn_lua/: main.lua
scripts/dgcnn_lua/utils/: generate_torch_graphs.lua  process_raw_data_python.py
scripts/dgcnn_pytorch/: main.py
scripts/super_voxel/: 室外点云场景分割方法研究.docx
scripts/super_voxel-based/: 配置PCL点云.docx
scripts/super_voxel-based/linux/: CMakeCache.txt  CMakeLists.txt  Makefile  file_trs.cpp  file_trs.h  segment_process.cpp  sence_segmentation_rgb.cpp
scripts/super_voxel-based/win/: CMakeLists.txt  file_trs.h  segment_process.cpp  segment_process.h
scripts/super_voxel/linux/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  file_trs.cpp  segment_process.h  sence_segmentation_rgb.cpp
src/: TLControl.py  __init__.py  controller.py  eval.py  pub_config.py  test.py  train.py
src/config/: config.py  lidar_2d_config.py
src/control/: PTControl.py  TLControl.py  __init__.py  controller.py
src/imdb/: kitti.py  model.py
src/model/: __init__.py  modeldata.py
src/net/: cnn.py  mplnet.py  pointcloud.py
src/utils/: gn_util.py  squ_util.py  tf_util.py  util.py  vol_util.py
(+16 files in other folders)
